# cargopal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  context.rs  main.rs  utils.rs
src/commands/: dev.rs  new.rs
templates/cli/: .cargopal.toml.hbs  Cargo.toml  Cargo.toml.hbs
templates/web/: .cargopal.toml.hbs  Cargo.toml  Cargo.toml.hbs
templates/web/src/: main.rs
tests/: cli.rs
