[package]
name = "cargopal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
handlebars = "6.3.2"
rust-embed = "8.7.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
fs_extra = "1.3.0"
predicates = "3.1.3"
tempfile = "3.20.0"
toml = "0.9.2"
