[package]
name = "cargopal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
duct = "1.0.0"
handlebars = "6.3.2"
notify = "8.1.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
fs_extra = "1.3.0"
predicates = "3.1.3"
tempfile = "3.20.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-test = "0.2.5"
nix = { version = "0.30.1", features = ["process", "signal"] }
